--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -7,9 +7,14 @@ nav {
   color: #fff;
   text-align: center;
 
+  .menu-button {
+    display: none;
+  }
+
   ul {
     margin: 0;
     padding: 0;
+    display: block;
 
     li {
       display: inline-block;
@@ -30,10 +35,37 @@ nav {
     }
   }
 
-  @media screen and (max-width: 720px) {
+  @media screen and (max-width: $xsm-width) {
+    .menu-button {
+      display: block;
+      position: fixed;
+      top: 0;
+      right: 0;
+      width: 100%;
+      height: 50px;
+      background-color: $nav_black;
+      text-align: right;
+
+      button {
+        width: 20%;
+        height: 50px;
+        box-sizing: border-box;
+        font-size: $disclaimer_size;
+        background-color: $nav_black;
+        color: $white;
+        border: 0;
+      }
+    }
+
     ul {
+      position: fixed;
+      top: 50px;
+      width: 100%;
       margin-top: -10px;
       padding: 0;
+      display: none;
+      background-color: $nav_black;
+      z-index: 3;
 
       li {
         display: block;
