--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,31 +2,13 @@
 
 @import 'variables';
 
+@import 'header';
+@import 'nav';
+
 body {
   font-family: 'Lato', sans-serif;
   padding: 0;
   margin: 0;
-
-  header {
-    text-align: center;
-    width: 100%;
-    margin: 0;
-    background-image: url('../images/purty_wood.png');
-    background-repeat: repeat-x;
-
-    img {
-      width: auto;
-      height: 350px;
-      padding: 1em 0;
-    }
-
-    @media screen and (max-width: 628px) {
-      img {
-        width: 99%;
-        height: 99%;
-      }
-    }
-  }
 
   a {
     text-decoration: underline;
@@ -146,7 +128,7 @@ body {
     }
   }
 
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: $xsm-width) {
     & {
       width: 100%;
 
