--- a/templates/skeleton.twig
+++ b/templates/skeleton.twig
@@ -15,6 +15,9 @@
   </header>
 
   <nav>
+    <div class="menu-button">
+      <button id="menu">Menu</button>
+    </div>
     <ul>
       <li><a href="/home">Home</a></li>
       <li><a href="/about">About</a></li>
@@ -44,6 +47,7 @@
     {% endblock %}
   </footer>
 
+  {% include 'scripts.twig' %}
   {% block scripts %}{% endblock %}
 </body>
 </html>
