--- a/templates/skeleton.twig
+++ b/templates/skeleton.twig
@@ -15,17 +15,18 @@
   </header>
 
   <nav>
-    <div class="menu-button">
-      <button id="menu">Menu</button>
-    </div>
-    <ul>
-      <li><a href="/home">Home</a></li>
-      <li><a href="/about">About</a></li>
-      <li><a href="/gallery">Gallery</a></li>
-      <li><a href="/services">Services</a></li>
-      <li><a href="/contact">Contact</a></li>
-    </ul>
-    {% block nav %}{% endblock %}
+    {% block nav %}
+      <div class="menu-button">
+        <button id="menu">Menu</button>
+      </div>
+      <ul>
+        <li><a href="/home">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/gallery">Gallery</a></li>
+        <li><a href="/services">Services</a></li>
+        <li><a href="/contact">Contact</a></li>
+      </ul>
+    {% endblock %}
   </nav>
 
   <div class="container">
